change coffee calendar into workout calender

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Coffee Calendar</h1>
+    <h1>Workout Calendar</h1>
     <input id="cups-coffee" type="text"/>
     <button id="button-coffee"> Log my Coffee</button>
 
