change the unit into  mins

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet"/>
+    
 </head>
 <body>
     <h1>Workout Calendar</h1>
-    <input id="cups-coffee" type="text"/>
-    <button id="button-coffee"> Log my Coffee</button>
+    <input id="Mins-workout" type="text"/>
+    <button id="button-workout"> Log my Workout</button>
 
     <div class="total-traker">
-        <button id="get-tracker"> How much coffee did I have?</button>
-        <div id="coffee-info">
+        <button id="get-tracker"> How long did I Workout?</button>
+        <div id="workout-info">
             
         </div>
     </div>
